[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "A4toA5"
version = "0.0.1"
authors = [
  { name="Anyshpm Chen", email="anyshpm@anyshpm.com" },
]
description = "Calculate A5 print sequance from A4 documents."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/anyshpm/a4toa5"
"Bug Tracker" = "https://github.com/anyshpm/a4toa5/issues"
